<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:layoutDirection="ltr"
    tools:context="com.anad.mobile.post.Activity.RegisterActivity_next">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Register_next_txt_title_margin_top"
        android:text="@string/Register_complete"
        android:textSize="16sp"
        android:textColor="@android:color/white"

        android:id="@+id/Register_next_txt_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/Register_next_txt_title_margin_bottom"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/Register_next_linearLayout_editText_container"
        android:layout_below="@id/Register_next_txt_title">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/Register_next_edt_height"
            android:hint="@string/Resigter_name"

            android:textColorHint="@android:color/white"
            android:id="@+id/Register_next_edt_name"
            android:textColor="@android:color/white"
            android:background="@drawable/login_edt_shape"
            android:layout_marginRight="@dimen/Register_next_edt_margin_right"
            android:layout_marginLeft="@dimen/Register_next_edt_margin_left"
            android:textStyle="bold"
            android:textSize="16sp"
            android:maxLines="1"
            android:gravity="right|bottom"
            android:paddingBottom="@dimen/Register_next_edt_padding_bottom"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/Register_next_edt_height"
            android:hint="@string/Register_family_name"

            android:textColorHint="@android:color/white"
            android:id="@+id/Register_next_edt_family_name"
            android:textColor="@android:color/white"
            android:background="@drawable/login_edt_shape"
            android:layout_marginRight="@dimen/Register_next_edt_margin_right"
            android:layout_marginLeft="@dimen/Register_next_edt_margin_left"
            android:textStyle="bold"
            android:textSize="16sp"
            android:maxLines="1"
            android:gravity="right|bottom"
            android:paddingBottom="@dimen/Register_next_edt_padding_bottom"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/Register_next_edt_height"
            android:hint="@string/Register_phone_number"

            android:textColorHint="@android:color/darker_gray"
            android:id="@+id/Register_next_edt_phone_number"
            android:textColor="@android:color/white"
            android:background="@drawable/login_edt_shape"
            android:layout_marginRight="@dimen/Register_next_edt_margin_right"
            android:layout_marginLeft="@dimen/Register_next_edt_margin_left"
            android:textStyle="bold"
            android:textSize="16sp"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="11"
            android:gravity="right|bottom"
            android:paddingBottom="@dimen/Register_next_edt_padding_bottom"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/Register_next_edt_height"
            android:hint="@string/Register_job"

            android:textColorHint="@android:color/white"
            android:id="@+id/Register_next_edt_job"
            android:textColor="@android:color/white"
            android:background="@drawable/login_edt_shape"
            android:layout_marginRight="@dimen/Register_next_edt_margin_right"
            android:layout_marginLeft="@dimen/Register_next_edt_margin_left"
            android:textStyle="bold"
            android:textSize="16sp"
            android:maxLines="1"
            android:gravity="right|bottom"
            android:paddingBottom="@dimen/Register_next_edt_padding_bottom"
            />
    </LinearLayout>

    <com.victor.loading.rotate.RotateLoading
        android:layout_width="@dimen/loading_width_height"
        android:layout_height="@dimen/loading_width_height"
        android:layout_gravity="center"
        android:layout_below="@id/Register_next_linearLayout_editText_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/loading_margin_top_register_next"
        android:id="@+id/Register_next_rotate_loading"
        app:loading_width="@dimen/loading_width"
        app:loading_color="@color/colorAccent"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/Register_next_btn_height"
        android:id="@+id/Register_next_btn_send_data"
        android:background="@color/colorAccent"
        android:text="@string/Register_send_data"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/Register_next_btn_margin_bottom"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/Register_next_txt_back_height"
        android:layout_centerHorizontal="true"
        android:text="@string/Register_back_title"
        android:textSize="16sp"
        android:id="@+id/Register_next_txt_back"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:layout_marginBottom="@dimen/Register_next_txt_back_margin_bottom"
        />



</RelativeLayout>
