<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingRight="@dimen/margin_after_normal"
    android:paddingLeft="@dimen/margin_after_normal"
    android:paddingBottom="1dp"
    android:id="@+id/report_item_main_root"
    android:layoutDirection="ltr"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/report_item_height"
        app:cardCornerRadius="@dimen/margin_verySmall"
        app:cardElevation="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_large"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:id="@+id/report_item_title"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="فرم رهسپاری"
                    android:id="@+id/report_item_txt_title"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:visibility="gone"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@id/report_item_title"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="1396/10/26"
                        android:gravity="right|center_vertical"
                        android:id="@+id/report_item_txt_date"
                        android:textSize="10sp"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:gravity="right|center_vertical"
                        android:layout_height="match_parent"
                        android:textSize="10sp"
                        android:text="@string/date_title_report"
                        android:paddingRight="@dimen/margin_large"
                        />



                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="تهران - بندر عباس"
                        android:gravity="right|center_vertical"
                        android:id="@+id/report_item_txt_path"
                        android:textSize="10sp"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:gravity="right|center_vertical"
                        android:layout_height="match_parent"
                        android:paddingRight="@dimen/margin_large"
                        android:text="@string/path_title_report"
                        android:textSize="10sp"
                        />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="الیاس محمدی"
                        android:gravity="right|center_vertical"
                        android:id="@+id/report_item_txt_driver_name"
                        android:textSize="10dp"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:gravity="right|center_vertical"
                        android:layout_height="match_parent"
                        android:paddingRight="@dimen/margin_large"
                        android:text="@string/driver_name_title_report"
                        android:textSize="10sp"
                        />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="1234"
                        android:gravity="right|center_vertical"
                        android:id="@+id/report_item_txt_driver_code"
                        android:textSize="10sp"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:gravity="right|center_vertical"
                        android:layout_height="match_parent"
                        android:paddingRight="@dimen/margin_large"
                        android:text="@string/driver_code_title_report"
                        android:textSize="10sp"
                        />


                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>