<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/Filter_Activity_root_padding"
    tools:context="com.anad.mobile.post.Activity.FilterActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/Filter_Activity_card_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorAccent">

        <TextView
            android:id="@+id/Filter_Activity_txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/Filter_Activity_title_margin"
            android:text="@string/General_Report"
            android:textColor="@color/colorPrimary" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/Filter_Activity_card_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Filter_Activity_card_title"
        android:layout_marginTop="@dimen/Filter_Activity_card_margin_top"
        app:elevation="@dimen/Filter_Activity_card_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/Filter_Activity_fab_accept_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/Report_fragment_fab_margin"
                android:layout_marginLeft="@dimen/Report_fragment_fab_margin"
                android:src="@drawable/check" />

            <ScrollView
                android:id="@+id/Filter_Activity_filter_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/Filter_Activity_scroll_padding"
                android:layout_above="@id/Filter_Activity_fab_accept_filter">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/Filter_Activity_filter_root"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/head" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/head" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/head" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/head" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/head" />

                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/Filter_Activity_filter_root">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="8dp"
                            android:text="@string/Cars_state" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/Filter_Activity_switch_ofOn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>
                </RelativeLayout>
            </ScrollView>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
